@@ -6,76 +6,65 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
-public class User implements UserDetails { // <-- เพิ่ม implements UserDetails
-
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Long id;
-
-    @Column(unique = true, nullable = false)
-    private String email;
-
-    private String name;
-
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
-    private Role role;
-
-    private String password;
-
-    @Column(unique = true, nullable = false)
-    private String username;
+public class User implements UserDetails {
 
     public enum Role {
         ROLE_USER,
         ROLE_ADMIN
     }
 
-    // Getters and Setters (เหมือนเดิม)
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(unique = true, nullable = false)
+    private String studentId;
+
+    @Enumerated(EnumType.STRING)
+    private Role role;
+
+    // ✅ Constructors
+    public User() {}
+
+    public User(String studentId, Role role) {
+        this.studentId = studentId;
+        this.role = role;
+    }
+
+    // ✅ Getters / Setters
     public Long getId() { return id; }
-    public void setId(Long id) { this.id = id; }
-    public String getEmail() { return email; }
-    public void setEmail(String email) { this.email = email; }
-    public String getName() { return name; }
-    public void setName(String name) { this.name = name; }
+    public String getStudentId() { return studentId; }
+    public void setStudentId(String studentId) { this.studentId = studentId; }
     public Role getRole() { return role; }
     public void setRole(Role role) { this.role = role; }
-    public String getPassword() { return password; }
-    public void setPassword(String password) { this.password = password; }
-    @Override // Override getUsername from UserDetails
-    public String getUsername() { return username; }
-    public void setUsername(String username) { this.username = username; }
 
-
-    // --- vvvvv เมธอดที่เพิ่มเข้ามาจาก UserDetails vvvvv ---
-
+    // ✅ Implementations for UserDetails interface
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        // เมธอดนี้สำคัญที่สุด ใช้สำหรับส่ง Role ของเราให้ Spring Security
-        return Collections.singletonList(new SimpleGrantedAuthority(this.role.name()));
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true; // บัญชีไม่หมดอายุ
+    public String getPassword() {
+        // Not needed — TU API handles authentication
+        return null;
     }
 
     @Override
-    public boolean isAccountNonLocked() {
-        return true; // บัญชีไม่ถูกล็อก
+    public String getUsername() {
+        return studentId;
     }
 
     @Override
-    public boolean isCredentialsNonExpired() {
-        return true; // รหัสผ่านไม่หมดอายุ
-    }
-
+    public boolean isAccountNonExpired() { return true; }
     @Override
-    public boolean isEnabled() {
-        return true; // บัญชีเปิดใช้งาน
-    }
+    public boolean isAccountNonLocked() { return true; }
+    @Override
+    public boolean isCredentialsNonExpired() { return true; }
+    @Override
+    public boolean isEnabled() { return true; }
 }
